--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Jacky Zhao
+name: Rishi Cadambe
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -8,10 +8,9 @@ enableFooter: true
 enableContextualBacklinks: true
 enableRecentNotes: false
 description:
-  Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
-  Wikilink support, backlinks, local graph, tags, and link previews.
+  Notes of mine
 page_title:
-  "🪴 Quartz 3.2"
+  "Hub"
 links:
   - link_name: Twitter
     link: https://twitter.com/_jzhao
