--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ disablePathToLower = true
 ignoreFiles = [
     "/content/templates/*",
     "/content/private/*",
+    "/content/.obsidian/*",
 ]
 summaryLength = 20
 paginate = 10
