--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://theindexx.github.io/zettelkasten/"
+baseURL = "https://theindexx.github.io/notes/"
 languageCode = "en-us"
 googleAnalytics = "G-XYFD95KB4J"
 pygmentsUseClasses = true
@@ -7,7 +7,6 @@ disablePathToLower = true
 ignoreFiles = [
     "/content/templates/*",
     "/content/private/*",
-    "/content/.obsidian/*",
 ]
 summaryLength = 20
 paginate = 10
