fixing a mess pt 8

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Rishi Cadambe
+name: TheIndexx
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -10,7 +10,7 @@ enableRecentNotes: false
 description:
   Notes of mine
 page_title:
-  "Hub"
+  "Rishi Cadambe | Notes"
 links:
   - link_name: Twitter
     link: https://twitter.com/_jzhao
