--- a/data/config.yaml
+++ b/data/config.yaml
@@ -10,7 +10,7 @@ enableRecentNotes: false
 description:
   Notes of mine
 page_title:
-  "Rishi Cadambe | Notes"
+  "🤖Destination: Nowhere"
 links:
   - link_name: Twitter
     link: https://twitter.com/_jzhao
