update contact info

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -12,7 +12,7 @@ description:
 page_title:
   "🤖Destination: Nowhere"
 links:
-  - link_name: Twitter
-    link: https://twitter.com/_jzhao
+  - link_name: Linkedin
+    link: https://www.linkedin.com/in/rishi-c-9643a6211
   - link_name: Github
-    link: https://github.com/jackyzha0
+    link: https://github.com/theindexx
