--- a/data/graphConfig.yaml
+++ b/data/graphConfig.yaml
@@ -9,11 +9,11 @@ localGraph:
     enableLegend: false
     enableDrag: true
     enableZoom: true
-    depth: 1 # set to -1 to show full graph
+    depth: -1 # set to -1 to show full graph
     scale: 1.2
     repelForce: 2
     centerForce: 1
-    #linkDistance: 1
+    linkDistance: 1
     fontSize: 0.6
     opacityScale: 3
 
@@ -24,11 +24,11 @@ globalGraph:
     enableDrag: true
     enableZoom: true
     depth: -1 # set to -1 to show full graph
-    scale: 1.2
-    repelForce: 2
+    scale: 1.4
+    repelForce: 1
     centerForce: 1
     linkDistance: 1
-    fontSize: 0.6
+    fontSize: 0.5
     opacityScale: 3
 
 ### For all graphs ###
